test_src/compiler_errors/types/binary/InvertBoolError.b
class InvertBoolError {
    void test() {
        println(~false);
    }
}
